--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
   },
   "devDependencies": {
     "@glimmer/application": "^0.4.0",
-    "@glimmer/application-pipeline": "^0.5.2",
+    "@glimmer/application-pipeline": "^0.6.4",
     "@glimmer/component": "^0.3.8",
     "@glimmer/resolver": "^0.3.0",
     "ember-cli": "github:ember-cli/ember-cli",
     "ember-cli-inject-live-reload": "^1.6.1",
+    "rollup-plugin-replace": "^1.1.1",
     "typescript": "^2.2.2"
   },
   "engines": {
     "node": ">= 4.0"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "redux": "^3.6.0",
+    "rollup-plugin-node-resolve": "^3.0.0"
+  }
 }
