--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
   "devDependencies": {
     "@glimmer/application": "^0.4.0",
     "@glimmer/application-pipeline": "^0.6.4",
+    "@glimmer/blueprint": "^0.2.1",
     "@glimmer/component": "^0.3.8",
     "@glimmer/resolver": "^0.3.0",
+    "broccoli-asset-rev": "^2.5.0",
     "ember-cli": "github:ember-cli/ember-cli",
     "ember-cli-inject-live-reload": "^1.6.1",
+    "redux": "^3.6.0",
+    "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-replace": "^1.1.1",
+    "ember-cli-uglify": "^1.2.0",
     "typescript": "^2.2.2"
   },
   "engines": {
     "node": ">= 4.0"
   },
-  "private": true,
-  "dependencies": {
-    "redux": "^3.6.0",
-    "rollup-plugin-node-resolve": "^3.0.0"
-  }
+  "private": true
 }
