added @each example/ with component and without component

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "private": true,
   "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "glimmer-redux": "^0.0.8",
     "rollup-plugin-glimmer-redux": "^0.0.3"
   }
